Normal flow changes

--- a/dumm1/appsettings.json
+++ b/dumm1/appsettings.json
@@ -8,12 +8,13 @@
   "AllowedHosts": "*",
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "ClientId": "f7678166-9636-4249-8db5-a4cead468e9a",
-    "TenantId": "9f936ca3-fb43-464f-ad91-64fc1acac62d",
+    "ClientId": "057f6e95-3038-410d-842a-131f59054d1f",
+    "TenantId": "b7366fbe-973b-4037-8f06-bc9d76f7fca7",
+    "ClientSecret": ".kv8Q~gSSE5Q6T6jVLZbxLGA6sHOUTD1KYe8EazS",
     "Scopes": "Sites.Read.All"
   },
   "SharePoint": {
-    "SiteId": "your-site-id",
-    "ListId": "your-list-id"
+    "SiteId": "c79d66e3-7b80-45a4-8066-b3cce39622d3,e6776ffb-a571-444b-aac2-4e04db02e45d",
+    "ListId": "ee298afa-8536-4d35-8544-81b3beaac48a"
   }
 }
